--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -66,7 +66,8 @@
             <div class="form-group">
               <div class="form-field">
                 <label><i class="moon-Help fix-top"
-                          matTooltip="Note: when switching method a backup of your credentials and config files will be created and the original files cleaned."></i>&nbsp;AWS Credential Method</label>
+                          matTooltip="Note: when switching method a backup of your credentials and config files will be created and the original files cleaned."></i>&nbsp;AWS
+                  Credential Method</label>
                 <ng-select formControlName="credentialMethodSelect"
                            bindLabel="credentialMethod"
                            bindValue="credentialMethod"
@@ -88,8 +89,10 @@
           <div class="form-group">
             <div class="form-field">
               <label><i class="moon-Help fix-top"
-                matTooltip="Note: The minimum session duration is 1 hour, and can be set to a maximum of 12 hours."></i>&nbsp;Session Time</label>
-              <input formControlName="sessionDuration" type="number" class="form-control" min="1" max="12" step="1" [value]="webConsoleSessionDuration">
+                        matTooltip="Note: The minimum session duration is 1 hour, and can be set to a maximum of 12 hours."></i>&nbsp;Session
+                Time</label>
+              <input formControlName="sessionDuration" type="number" class="form-control" min="1" max="12" step="1"
+                     [value]="webConsoleSessionDuration">
             </div>
           </div>
         </div>
@@ -107,11 +110,13 @@
 
               <span class="proxy-length-2">://</span>
 
-              <input spellcheck="false" formControlName="proxyUrl" type="text" class="form-control proxy-length-3" placeholder="Enter Proxy Url" [value]="proxyUrl">
+              <input spellcheck="false" formControlName="proxyUrl" type="text" class="form-control proxy-length-3" placeholder="Enter Proxy Url"
+                     [value]="proxyUrl">
 
               <span class="proxy-length-4">:</span>
 
-              <input spellcheck="false" formControlName="proxyPort" type="text" class="form-control proxy-length-5" placeholder="Enter Proxy Port" [value]="proxyPort">
+              <input spellcheck="false" formControlName="proxyPort" type="text" class="form-control proxy-length-5" placeholder="Enter Proxy Port"
+                     [value]="proxyPort">
             </div>
           </div>
 
@@ -125,7 +130,8 @@
           <div class="form-group" *ngIf="showProxyAuthentication">
             <div class="form-field">
               <label>Username</label>
-              <input spellcheck="false" formControlName="proxyUsername" type="text" class="form-control" placeholder="Proxy Username" [value]="proxyUsername">
+              <input spellcheck="false" formControlName="proxyUsername" type="text" class="form-control" placeholder="Proxy Username"
+                     [value]="proxyUsername">
             </div>
 
             <div class="form-field">
@@ -256,32 +262,38 @@
 
         <div class="form-group">
           <div class="form-field form-control-input-button max-width">
-            <input spellcheck="false" formControlName="pluginDeepLink" type="text" class="form-control max-width" placeholder="Insert an npm package name"
+            <input spellcheck="false" formControlName="pluginDeepLink" type="text" class="form-control max-width"
+                   placeholder="Insert an npm package name"
                    (keydown.enter)="$event.preventDefault(); installPlugin();">
             <button [disabled]="fetchingPlugins" class="button" type="button" (click)="installPlugin();"><i class="moon-Add"></i></button>
           </div>
 
           <h4> Installed plugins
-            <button class="borderless-button pull-right" (click)="$event.preventDefault(); openPluginFolder()"><i class="fas fa-folder-open blackery" matTooltip="Open plugin folder"></i></button>
-            <button [disabled]="fetchingPlugins" class="borderless-button pull-right"(click)="$event.preventDefault(); refreshPluginList(true)"><i class="fa fa-refresh blackery" matTooltip="Refresh plugin list"></i></button>
+            <button class="borderless-button pull-right" (click)="$event.preventDefault(); openPluginFolder()"><i class="fas fa-folder-open blackery"
+                                                                                                                  matTooltip="Open plugin folder"></i>
+            </button>
+            <button [disabled]="fetchingPlugins" class="borderless-button pull-right" (click)="$event.preventDefault(); refreshPluginList(true)"><i
+              class="fa fa-refresh blackery" matTooltip="Refresh plugin list"></i></button>
           </h4>
 
           <div class="form-group scrollable max-height-320 tableFixHead">
             <table class="table plugin-table">
               <thead>
-                <th><span class="centered-column">Name</span></th>
-                <th><span class="centered-column">Version</span></th>
-                <th><span class="centered-column">Supported OS</span></th>
-                <th><span class="centered-column">Enabled</span></th>
+              <th><span class="centered-column">Name</span></th>
+              <th><span class="centered-column">Version</span></th>
+              <th><span class="centered-column">Supported OS</span></th>
+              <th><span class="centered-column">Enabled</span></th>
               </thead>
               <tbody>
               <ng-container *ngFor="let plugin of pluginList">
                 <tr>
-                  <td><i class="fa fa-info-circle blackery" matTooltipClass="allow-cr" [matTooltip]="getPluginExtraInfo(plugin)"></i>&nbsp;{{plugin.metadata.uniqueName}}</td>
+                  <td><i class="fa fa-info-circle blackery" matTooltipClass="allow-cr"
+                         [matTooltip]="getPluginExtraInfo(plugin)"></i>&nbsp;{{plugin.metadata.uniqueName}}</td>
                   <td>{{plugin.metadata.version}}</td>
                   <td [innerHTML]="getSupportedOsIcons(plugin)"></td>
                   <td>
-                    <mat-slide-toggle class="inline toggleColoredCorrectly" (toggleChange)="togglePluginActivation(plugin)" [checked]="plugin.metadata.active"></mat-slide-toggle>
+                    <mat-slide-toggle class="inline toggleColoredCorrectly" (toggleChange)="togglePluginActivation(plugin)"
+                                      [checked]="plugin.metadata.active"></mat-slide-toggle>
                   </td>
                 </tr>
               </ng-container>
@@ -303,30 +315,35 @@
           <img src="assets/images/in-browser.png" alt="">
           <p class="extension-info">
             <strong>Multi-Console Browser Extension</strong>
-            <span class="description-container">Navigate multiple AWS consoles on different tabs at once. <a (click)="openBrowser('https://docs.leapp.cloud/latest/built-in-features/multi-console/#install-the-extension')">Read the docs for more info.</a></span>
+            <span class="description-container">Navigate multiple AWS consoles on different tabs at once. <a
+              (click)="openBrowser('https://docs.leapp.cloud/latest/built-in-features/multi-console/#install-the-extension')">Read the docs for more info.</a></span>
             <br>
             <span class="button-container">
-              <button type="button" class="install-firefox-button" (click)="openBrowser('https://addons.mozilla.org/en-US/firefox/addon/leapp-multi-console-extension/')">Get for Firefox</button>
-              <button type="button" class="install-chrome-button" (click)="openBrowser('https://d3o59asa8udcq9.cloudfront.net/extension/leapp-extension-chromium-latest.zip')">Get for Chrome/Others</button>
+              <button type="button" class="install-firefox-button"
+                      (click)="openBrowser('https://addons.mozilla.org/en-US/firefox/addon/leapp-multi-console-extension/')">Get for Firefox</button>
+              <button type="button" class="install-chrome-button"
+                      (click)="openBrowser('https://d3o59asa8udcq9.cloudfront.net/extension/leapp-extension-chromium-latest.zip')">Get for Chrome/Others</button>
             </span>
           </p>
         </div>
-<!--        <div class="open-method-container">-->
-<!--          <h2>Open Web Console - Method</h2>-->
+        <!--        <div class="open-method-container">-->
+        <!--          <h2>Open Web Console - Method</h2>-->
 
-<!--          <div class="form-container">-->
-<!--            <div class="form-group">-->
-<!--              <div class="form-field">-->
-<!--                <label>Method</label>-->
-<!--                <ng-select formControlName="terminalSelect" bindLabel="terminal" bindValue="terminal" [clearable]="false"-->
-<!--                           [items]="[{terminal: eConstants.macOsTerminal}, {terminal: eConstants.macOsIterm2}]" [(ngModel)]="selectedTerminal"-->
-<!--                           [appendTo]="'body'"></ng-select>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
+        <!--          <div class="form-container">-->
+        <!--            <div class="form-group">-->
+        <!--              <div class="form-field">-->
+        <!--                <label>Method</label>-->
+        <!--                <ng-select formControlName="terminalSelect" bindLabel="terminal" bindValue="terminal" [clearable]="false"-->
+        <!--                           [items]="[{terminal: eConstants.macOsTerminal}, {terminal: eConstants.macOsIterm2}]" [(ngModel)]="selectedTerminal"-->
+        <!--                           [appendTo]="'body'"></ng-select>-->
+        <!--              </div>-->
+        <!--            </div>-->
+        <!--          </div>-->
+        <!--        </div>-->
         <div class="enable-option">
-          <mat-slide-toggle class="enable-extension-toggle" (toggleChange)="toggleExtension()" [checked]="extensionEnabled">Enable Multi-Console Extension</mat-slide-toggle>
+          <mat-slide-toggle class="enable-extension-toggle" (toggleChange)="toggleExtension()" [checked]="extensionEnabled">Enable Multi-Console
+            Extension
+          </mat-slide-toggle>
           <span class="extension-description">Use the Extension as default. Fallback to the Single-Console method if the browser is closed or any error occurs.</span>
         </div>
       </div>
@@ -373,19 +390,36 @@
             </div>
           </div>
 
-          <div class="plan {{leappPlanStatus === eEnabledLeappPlanStatus.proEnabled || leappPlanStatus === eEnabledLeappPlanStatus.proPending ? 'selected' : ''}}">
+          <div
+            class="plan {{leappPlanStatus === eEnabledLeappPlanStatus.proEnabled || leappPlanStatus === eEnabledLeappPlanStatus.proPending ? 'selected' : ''}}">
             <div class="plan-header">
               <span class="pro-plan">Pro</span>
               <p>Pro plan for an enhanced single user experience</p>
             </div>
             <div class="plan-body">
               <div class="price-container">
-                <span class="price-value">$10</span>
-                <span class="price-description">Billed montlhy</span>
+                <span *ngIf="selectedPeriod === eBillingPeriod.yearly" class="price-value">
+                  <small class="full-price">89$</small><small class="discounted-price">59$</small><small class="lifetime-deal">LIFETIME&nbsp;DEAL</small>
+                </span>
+                <span *ngIf="selectedPeriod === eBillingPeriod.monthly" class="price-value">
+                  <small class="full-price">8.99$</small><small class="discounted-price">5.99$</small>
+                </span>
+                <div>
+                  <span class="toggle-btn-stripe {{selectedPeriod === eBillingPeriod.yearly ? 'selected' : ''}}"
+                        (click)="setBillingPeriod(eBillingPeriod.yearly)">Billed yearly
+                  </span>
+                  <span class="toggle-btn-stripe {{selectedPeriod === eBillingPeriod.monthly ? 'selected' : ''}}"
+                        (click)="setBillingPeriod(eBillingPeriod.monthly)">Billed montlhy
+                  </span>
+                </div>
               </div>
 
-              <div class="cta-button clickable" (click)="openLeappProPreCheckoutDialog()" *ngIf="leappPlanStatus === eEnabledLeappPlanStatus.free">Upgrade</div>
-              <div class="cta-button" *ngIf="leappPlanStatus === eEnabledLeappPlanStatus.proPending">Pending (step 1/2) <i class="fa fa-info-circle" [matTooltip]="'To complete the registration follow the instructions received via email and register on Leapp portal'"></i></div>
+              <div class="cta-button clickable" (click)="openLeappProPreCheckoutDialog()" *ngIf="leappPlanStatus === eEnabledLeappPlanStatus.free">
+                Upgrade
+              </div>
+              <div class="cta-button" *ngIf="leappPlanStatus === eEnabledLeappPlanStatus.proPending">Pending (step 1/2) <i class="fa fa-info-circle"
+                                                                                                                           [matTooltip]="'To complete the registration follow the instructions received via email and register on Leapp portal'"></i>
+              </div>
               <div class="cta-button" *ngIf="leappPlanStatus === eEnabledLeappPlanStatus.proEnabled">Your active plan</div>
               <div class="cta-button" *ngIf="leappPlanStatus === eEnabledLeappPlanStatus.enterprise">Already upgraded</div>
 
