--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -256,6 +256,15 @@
   }
 }
 
+.cta-label {
+  background: #52A8DC;
+  color: white;
+  border-radius: 5px;
+  padding: 7px 14px;
+  font-size: 14px;
+  margin: 0 10px;
+}
+
 .button-container {
   position: relative !important;
   top: 16px !important;
