--- a/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.html
+++ b/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.html
@@ -2,7 +2,7 @@
 <section>
   <span *ngIf="!isLoggedAsPro" class="unsync">
     <span><img src="assets/images/unsync.png" alt="" title=""> Sync disabled</span>
-    <button class="btn btn-primary" (click)="goToUpgrade();">Pro</button>
+    <button class="btn btn-primary" (click)="goToUpgrade();" *ngIf="!canRemoveButton">Upgrade to Pro</button>
   </span>
   <span *ngIf="isLoggedAsPro && isFailed" class="sync-failed"><span><img src="assets/images/syncfailed.png" alt="" title=""> Sync failed</span></span>
   <span *ngIf="isLoggedAsPro && isProgress" class="sync-progress"><span><img src="assets/images/syncprogress.png" alt=""
