chore: added behavoiur subject to pro plan changing state

--- a/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
+++ b/packages/desktop-app/src/app/components/lock-page/lock-page.component.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="local-workspace">
-    <p><span>Or switch back </span><span class="link-to-local" (click)="switchToLocalWorkspace();">to the local workspace</span></p>
+    <p><span>Sign out definitively from this device and </span><span class="link-to-local" (click)="switchToLocalWorkspace();">start with a local workspace</span></p>
   </div>
 </div>
 
