--- a/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.scss
+++ b/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.scss
@@ -25,7 +25,7 @@ section {
 }
 
 .unsync {
-  color: #999999;
+  color: #dadada;
 }
 
 span.sync, span.unsync, span.sync-failed, span.sync-progress {
@@ -41,16 +41,24 @@ span.sync, span.unsync, span.sync-failed, span.sync-progress {
   }
 
   button {
-    padding: 0 5px!important;
-    font-size: 10px;
-    background: #52A8DC;
-    border-color: #52A8DC;
-    width: 148px;
+    padding: 0 1px !important;
+    font-size: 11px;
+    background: #23d4b8;
+    border-color: #23d4b8;
+    width: 250px;
   }
 }
 
+span.sync-progress span {
+  color: #28c840;
+}
+
+span.sync-failed span {
+  color: #febc2e;
+}
+
 img {
-  height: 24px;
+  height: 17.5px;
   width: 24px;
 }
 
