--- a/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.scss
+++ b/packages/desktop-app/src/app/components/sync-pro-widget/sync-pro-widget.component.scss
@@ -45,6 +45,7 @@ span.sync, span.unsync, span.sync-failed, span.sync-progress {
     font-size: 11px;
     background: #23d4b8;
     border-color: #23d4b8;
+    color: #292929;
     width: 250px;
   }
 }
